🎨🐛 header button ie fix for counceling

--- a/site_static/site/scss/counselling.scss
+++ b/site_static/site/scss/counselling.scss
@@ -281,6 +281,7 @@ p + h2, p + h4, p + h5 {
         display: block;
         position: absolute !important;
         top: 50%;
+        left: 50%;
         margin: -46px 0 0 -175px;
         max-width: 330px !important;
 
